# Laboratory-Information-Management-System

./: .gitignore  .imgbotconfig  Cargo.toml  README.md  package-lock.json  package.json
.agent/rules/: rules.md
.cargo/: config.toml
.github/workflows/: release.yml
api/: LICENSING_SCHEMA.sql  api-purchase-license.ts  api-stripe-webhook.ts  api-validate-license.ts
crates/openbio-agent/: Cargo.toml
crates/openbio-agent/src/: main.rs
crates/openbio-core/: Cargo.toml
crates/openbio-core/src/: config.rs  error.rs  lib.rs  storage.rs
crates/openbio-server/: Cargo.toml  build.rs
crates/openbio-server/src/: lib.rs  main.rs  routes.rs  state.rs
crates/openbio-server/src/db/: migrations.rs  mod.rs
crates/openbio-wasm/: Cargo.toml
crates/openbio-wasm/src/: lib.rs
crates/prisma-cli/: Cargo.toml
crates/prisma-cli/src/: main.rs
database/: schema.prisma
database/migrations/20260127023127_init/: migration.sql
database/migrations/20260128074434_add_notebook_equipment_paper/: migration.sql
database/migrations/20260128081537_refactor_experiment_notebook/: migration.sql
docs/: BUSINESS_MODEL.md  CONFIG_REFERENCE.md  DESIGN.md  EXPERIMENTS_AND_LIBRARY.md  INSTRUCTION_ARCHITECTURE.md  NOTEBOOK_IMPLEMENTATION_SUMMARY.md  NOTEBOOK_MODULE.md  NOTEBOOK_QUICK_START.md  PRISMA_SETUP.md  UPDATES.md
scripts/: bump-version.js  generate-latest-json.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  licensing.rs  main.rs
web/: tailwind.config.js  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/features/equipment/: EquipmentPage.tsx
web/src/features/experiments/: ExperimentsPage.tsx
web/src/features/inventory/: InventoryPage.tsx
web/src/features/inventory/components/: BoxGrid.tsx  CreateContainerModal.tsx  CreateSampleModal.tsx  DeleteConfirmModal.tsx  HierarchyTree.tsx
web/src/features/notebooks/: NotebookPage.tsx
web/src/features/notebooks/components/: MentionList.tsx  NotebookEditor.tsx
web/src/features/setup/: SetupWizard.tsx  index.ts
web/src/lib/: ApiContext.tsx  api.ts  queryClient.ts
