[package]
name = "openbio"
version = "0.1.163"
description = "Laboratory Information Management System"
authors = ["OpenBio-OS"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openbio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
mdns-sd = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Internal crates for embedded server
openbio-server = { path = "../crates/openbio-server" }
openbio-core = { path = "../crates/openbio-core" }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

