[package]
name = "openbio-agent"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Ingest Agent for automated file ingestion from lab instruments"

[[bin]]
name = "openbio-agent"
path = "src/main.rs"

[dependencies]
openbio-core = { path = "../openbio-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
notify.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
