[package]
name = "openbio-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, traits, and utilities for OpenBio"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
dirs = "6"
