[package]
name = "openbio-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Axum HTTP API server for OpenBio"

[[bin]]
name = "openbio-server"
path = "src/main.rs"

[dependencies]
openbio-core = { path = "../openbio-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mdns-sd.workspace = true
anyhow.workspace = true

# Prisma Client Rust - database ORM
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite", "migrations"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite"] }
uuid = { version = "1.7", features = ["v4"] }
rusqlite = "0.25"

[build-dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite", "migrations"] }
