[package]
name = "openbio-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM engine for single-cell data analysis and visualization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
