[package]
name = "prisma-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prisma CLI for generating database client"

[[bin]]
name = "prisma-cli"
path = "src/main.rs"

[dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite", "migrations"] }
